2003-05-30 Tom Copeland  <tom@infoether.com>

	* www/my/index.php:
	Fixed bug #381 - My Tracker Items grouping was messed up.
	
	* www/people/create.php,index.php:
	Fixed bug #382 - On the project admin page, "Post Jobs" and 
	"Edit Jobs" were missing headers

2003-05-30 Roland Mas  <lolando@debian.org>

	* Changed the LDAP setup: we're now using an official OID space
	inside the Debian OID space.  Fixed attribute and objectclass
	names in the schema, and other files, accordingly.

2003-05-23 Tom Copeland <tom@infoether.com>

	* common/include/Stats.class, www/top/toplist.php, www/top/mostactive.php,
	www/top/index.php.
	"Top pageviews" and "Top downloads" both work now.

2003-05-21 Christian Bayle	<bayle@debian.org>

	* Applied Tony Guntharp (fusion94) patch #366. Description follow
	 when you have private groups in the gforge DB and they
	 have had downloads then they are visible under top
	 download in feature boxes. you still cant actually view
	 the project w/o the proper perms.
	 this is just a quick fix to the sql statement that
	 checks to see if it's private or public and to only
	 display public projects.

2003-05-21 Tom Copeland <tom@infoether.com>

	* common/frs/FRSRelease.class
	Fixed bug # 343; release name field checks were a bit strict.

2003-05-21 Reinhard Spisser <reinhard@spisser.it>

	* www/include/languages/Spanish.tab:
	Applied patch #350: Spanish translation. Thanks to Vincente Ruiz and 
 	his team.
   
2003-05-20 Tom Copeland <tom@infoether.com>

	* www/my/index.php, common/forum/ForumsForUser.class, 
	common/pm/ProjectTasksForUser.class, common/tracker/ArtifactsForUser.class
	Applied patch #349: Refactoring of the www/my/index.php page. Thanks to
	Jeff Fynboh for the code.
	
	* www/top/toplist.php,index.php:
	Made the "Top forum posts" work.

2003-05-19 Tom Copeland <tom@infoether.com>

	* common/include/User.class:
	Applied patch #353: theme and User.class problems

2003-05-17 Tom Copeland <tom@infoether.com>

	* www/top/most_active.php: